<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="blue">#3EC4DE</color>
    <color name="darkblue">#256C7A</color>
    <color name="techblue">#768CEE</color>
    <color name="techgold">#EED876</color>
    <color name="grey">#6B6B6B</color>
    <color name="darkgrey">#2B2B2B</color>
    <color name="red">#DE583E</color>
    <color name="darkred">#7A3325</color>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>

    <string name="app_name">C-Crypts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servicedesc">NFC Service</string>
    <string name="aiddescription">AID Description</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="str_cool">Cool!</string>
    <string name="str_awesome">Awesome!</string>

    <string name="title_frag_1">Home</string>
    <string name="title_frag_2">Generate Key Pair</string>
    <string name="title_frag_3">Authenticate Key Pair</string>
    <string name="title_frag_4">Read PlainText NFC</string>
    <string name="title_frag_5">Write PlainText NFC</string>
    <string name="str_simple_read">Simple Read</string>
    <string name="str_simple_nfc_result">Touch NFC Tag on Phone!</string>
    <string name="str_simple_nfc_message">"NFC Payload: "</string>
    <string name="str_simple_read_desc">This page verifies standard scanning of NFC tags used as proof of concept early on in our project. You can write simple plaintext by swiping the nav drawer and selecting \"Write PlainText NFC\" and read a written message on this page.</string>
    <string name="str_simple_write">Simple Write</string>
    <string name="str_simple_write_desc">This page verifies standard writing of messages to an NFC card. Write a message in the text field below, then set an NFC card on the phone to write the message. THIS WILL WIPE THE CONTENT PREVIOUSLY ON THE NFC CARD!!!</string>
    <string name="str_simple_write_hint">Write a message here, then place an NFC Tag on Phone!</string>
    <string name="str_simple_write_clear">Clear</string>
    <string name="str_msg_null">Null Tag</string>
    <string name="str_msg_empty">Message Is Empty... Nothing Written to NFC</string>
    <string name="str_msg_success">Message Written to NFC</string>
    <string name="str_msg_ioexception">Something REALLY messed up</string>
    <string name="str_msg_formatexception">This device doesn\'t support NFC.</string>
    <string name="str_msg_malformedmime">Check your mime type.</string>
    <string name="str_msg_wrong_mime">"Wrong mime type: "</string>
    <string name="str_ascii">US-ASCII</string>
    <string name="str_msg_unsupported_encoding">Unsupported Encoding</string>
    <string name="str_utf8">UTF-8</string>
    <string name="str_utf16">UTF-16</string>
    <string name="str_msg_nav_position">" | Position: "</string>
    <string name="str_msg_nfc_disabled">NFC is disabled...</string>
    <string name="str_home_desc">This app is our final project for Cybersecurity ( CSC-426 / CSC-526 ) at the South Dakota School of Mines and Technology. Use the Navigation Tab to acces the different parts of the app!</string>
    <string name="str_about">About</string>
    <string name="str_about_desc">ABOUT DIALOG HERE</string>
    <string name="Message_Hint">Enter Message to encode here</string>
    <string name="Encode_Message">Encode Message</string>
    <string name="Encoded_Message">Encoded Message:</string>
    <string name="Decoded_Text">Decoded Text:</string>

</resources>
